--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,3 @@
 {
-  "svelteSortOrder": "scripts-styles-markup",
-  "svelteStrictMode": true,
-  "svelteBracketNewLine": true,
-  "svelteAllowShorthand": false
+  "svelteSortOrder": "scripts-styles-markup"
 }
