--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "validate": "svelte-check"
   },
   "devDependencies": {
+    "@rollup/plugin-alias": "^3.1.2",
     "@rollup/plugin-commonjs": "^17.0.0",
     "@rollup/plugin-node-resolve": "^11.0.0",
     "@rollup/plugin-typescript": "^8.0.0",
@@ -24,9 +25,7 @@
     "svelte-check": "^1.0.0",
     "svelte-preprocess": "^4.7.3",
     "tslib": "^2.0.0",
-    "typescript": "^4.0.0"
-  },
-  "dependencies": {
+    "typescript": "^4.0.0",
     "@smui/button": "^4.2.0",
     "@smui/card": "^4.2.0",
     "@smui/list": "^4.2.0",
