--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "@rollup/plugin-node-resolve": "^11.0.0",
     "@rollup/plugin-typescript": "^8.0.0",
     "@tsconfig/svelte": "^1.0.0",
+    "autoprefixer": "^10.2.5",
+    "node-sass": "^6.0.0",
+    "postcss": "^8.2.15",
+    "postcss-load-config": "^3.0.1",
     "prettier": "^2.3.0",
     "prettier-plugin-svelte": "^2.3.0",
     "rollup": "^2.3.4",
@@ -21,15 +25,12 @@
     "rollup-plugin-livereload": "^2.0.0",
     "rollup-plugin-svelte": "^7.0.0",
     "rollup-plugin-terser": "^7.0.0",
+    "sirv-cli": "^1.0.0",
     "svelte": "^3.0.0",
     "svelte-check": "^1.0.0",
     "svelte-preprocess": "^4.7.3",
+    "svelte-spa-router": "^3.1.0",
     "tslib": "^2.0.0",
-    "typescript": "^4.0.0",
-    "autoprefixer": "^10.2.5",
-    "node-sass": "^6.0.0",
-    "postcss": "^8.2.15",
-    "postcss-load-config": "^3.0.1",
-    "sirv-cli": "^1.0.0"
+    "typescript": "^4.0.0"
   }
 }
