--- a/package.json
+++ b/package.json
@@ -32,5 +32,9 @@
     "svelte-spa-router": "^3.1.0",
     "tslib": "^2.0.0",
     "typescript": "^4.0.0"
+  },
+  "dependencies": {
+    "axios": "^0.21.1",
+    "rxjs": "^7.0.1"
   }
 }
